# wizards-blog-backend

./: Cargo.toml  README.md
src/: db.rs  main.rs  types.rs
src/routes/: notes.rs
src/utils/: jwt.rs
