[package]
name = "wizards-blog-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
actix-web = "4"
serde = { version = "1.0.215", features = ["derive"] }
dotenv = "0.15.0"
mongodb = "3.1.0"
serde_json = "1.0.133"
futures-util = "0.3.31"
jsonwebtoken = "=9.3.0"
